# FastapiMAGAZIN

./: .env  Dockerfile  docker-compose.yml  makefile  pyproject.toml
alembic/versions/: 24a6e2304cf7_1st_fullauth.py
src/: config.py  database.py  global_metadata.py  main.py
src/auth/: models.py  routers.py  schemas.py  services.py
src/categories/: models.py
src/products/: models.py
src/users/: models.py  schemas.py  services.py
